<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:background="@drawable/bg_dialog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/rename"
                android:textColor="@color/_121212"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/change_the_filename_to_your_desired_syntax"
                android:textColor="@color/aaaaaa"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_enter_name"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_vertical"
                android:hint="@string/enter_name"
                android:paddingStart="10dp"
                android:textColor="@color/_121212"
                android:textColorHint="@color/e3e3e3"
                android:textSize="14sp"
                android:maxLength="40"
                app:layout_constraintTop_toBottomOf="@id/tvContent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:text="@string/ok"
                android:textColor="@color/_45aef2"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:text="@string/tv_cancel"
                android:textColor="@color/aaaaaa"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvOk"
                app:layout_constraintTop_toBottomOf="@id/edt" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>