<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/nav_header" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctlOutPutPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_output_path"
            android:paddingBottom="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imv"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/imv_file_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/output_path"
                android:textColor="@color/_232323"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/imv"
                app:layout_constraintTop_toTopOf="@id/imv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/roboto_regular"
                android:text="/storage/emulated/0/music/ WellyVoiceChanger"
                android:textColor="@color/_9d9d9d"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imv"
                app:layout_constraintTop_toBottomOf="@id/tv1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/llLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/imv_language" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/language"
                android:textColor="@color/_121212"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_marginEnd="5dp"
                android:adjustViewBounds="true"
                android:src="@drawable/imv_arrow"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llRateUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/imv_rate" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/rate_us"
                android:textColor="@color/_121212"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/imv_share" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/share_app"
                android:textColor="@color/_121212"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/imv_policy" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/privacy_policy"
                android:textColor="@color/_121212"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</layout>