<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:strokeColor="#80EBEBEB"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="18dp">

            <LinearLayout
                android:id="@+id/llName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:gravity="center"
                android:background="#F4F7FF"
                android:orientation="horizontal"
                android:paddingVertical="4dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_sort_name"
                    android:layout_marginStart="8dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/roboto_regular"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="@string/name"
                    android:textColor="@color/_222222"
                    android:textSize="14sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="4dp"
                android:layout_marginTop="15dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_sort_size"
                    android:layout_marginStart="8dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/roboto_regular"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="@string/size"
                    android:textColor="@color/_222222"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="4dp"
                android:layout_marginTop="15dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_sort_date"
                    android:layout_marginStart="8dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/roboto_regular"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="@string/date"
                    android:textColor="@color/_222222"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="4dp"
                android:layout_marginTop="15dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_sort_type"
                    android:layout_marginStart="8dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/roboto_regular"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="@string/type"
                    android:textColor="@color/_222222"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>