<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFBF9"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="51dp"
            android:paddingBottom="21dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imvBack"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="13dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/enter_file_name_here"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColor="@color/_121212"
                android:textColorHint="@color/aaaaaa"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imvX"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:src="@drawable/ic_delete" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSuggest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/suggest"
            android:textColor="@color/_121212"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSuggest"
            tools:itemCount="10"
            tools:listitem="@layout/item_all_files" />

        <LinearLayout
            android:id="@+id/llSearchNull"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="300dp"
                android:src="@drawable/imv_no_search" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/no_files_match_your_search_query"
                android:textColorHint="@color/aaaaaa"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>