<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:strokeColor="#80EBEBEB"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <LinearLayout
                android:id="@+id/llRename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_rename" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/roboto_regular"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="@string/rename"
                    android:textColor="@color/_222222"
                    android:textSize="14sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="7dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_share_popup" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/roboto_regular"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="@string/share"
                    android:textColor="@color/_222222"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="7dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_delete_popup" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/roboto_regular"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="@string/delete"
                    android:textColor="@color/_222222"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>